--- a/src/v00v.Views/Explorer/ItemControl.xaml
+++ b/src/v00v.Views/Explorer/ItemControl.xaml
@@ -5,7 +5,6 @@
     xmlns:converters="clr-namespace:v00v.Model.Converters;assembly=v00v.Model"
     xmlns:enums="clr-namespace:v00v.Model.Enums;assembly=v00v.Model"
     >
-
     <Border BorderBrush="#242e44" BorderThickness="0.2">
         <Grid RowDefinitions="auto,auto" ColumnDefinitions="auto,*,auto,auto">
             <Path Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" 
@@ -14,34 +13,26 @@
                   Fill="Green" 
                   IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:WatchState.Watched}, Mode=TwoWay}" 
                   />
-
             <Path Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" 
                   Data="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,18 C5.6,18 2,14.4 2,10 C2,5.6 5.6,2 10,2 C14.4,2 18,5.6 18,10 C18,14.4 14.4,18 10,18 Z M10.5,5 L9,5 L9,11 L14.2,14.2 L15,12.9 L10.5,10.2 L10.5,5 Z"
                   Stretch="Fill"
                   Fill="DarkMagenta" 
                   IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:WatchState.Planned}, Mode=TwoWay}"
-                  />
-
+            />
             <Button Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Width="51" Height="51" VerticalAlignment="Top"
                     BorderThickness="0" Padding="0" Background="Transparent" BorderBrush="Transparent"
                     Command="{Binding $parent[ListBox].DataContext.OpenCommand, Mode=OneTime}" 
                     CommandParameter="{Binding}"
-                    >
+            >
                 <Image Source="{Binding Thumb, Mode=OneWay}" Opacity="{Binding OpacityThumb, Mode=OneWay}" Stretch="Fill"  
                        VerticalAlignment="Center" HorizontalAlignment="Center" 
                        />
             </Button>
-
             <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#E4D6FE" Opacity="0.05" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:SyncState.Notset}, Mode=TwoWay}"/>
-
             <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#90EE90" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:SyncState.Added}, Mode=TwoWay}"/>
-
             <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#FBACA8" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:SyncState.Unlisted}, Mode=TwoWay}"/>
-
             <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#CD3C2E" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:SyncState.Deleted}, Mode=TwoWay}"/>
-
             <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Title, Mode=OneWay}" Margin="5,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Center" FontSize="19" />
-
             <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
                 <Border BorderBrush="#FF000000" BorderThickness="0.3" CornerRadius="3" Margin="5,0,0,2" VerticalAlignment="Bottom">
                     <TextBlock Text="{Binding DurationString, Mode=OneWay}" FontSize="15" Margin="5,0,5,0"/>
@@ -49,24 +40,20 @@
                 <TextBlock Text="{Binding ViewCount, Mode=OneWay}" FontSize="12" Margin="8,5,0,3" VerticalAlignment="Bottom"/>
                 <TextBlock Text="{Binding DurationAgo, Mode=OneWay}" FontSize="12" Margin="6,5,0,3" VerticalAlignment="Bottom"/>
             </StackPanel>
-
             <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" Margin="0,0,5,0">
                 <TextBlock Text="{Binding LikeCount, Mode=OneWay}" FontSize="9.5" HorizontalAlignment="Right"/>
                 <TextBlock Text="{Binding DislikeCount, Mode=OneWay}" FontSize="9.5" HorizontalAlignment="Right"/>
                 <TextBlock Text="{Binding Comments, Mode=OneWay}" FontSize="9.5" HorizontalAlignment="Right"/>
                 <TextBlock Text="{Binding ViewDiff, Mode=OneWay}" FontSize="9.5" HorizontalAlignment="Right"/>
             </StackPanel>
-
             <Panel Grid.Row="0" Grid.Column="3" Grid.RowSpan="3" Width="15" IsVisible="{Binding !Downloaded, Mode=OneWay}">
                 <Button Background="#bdacd1" IsVisible="{Binding !IsWorking, Mode=OneWay}"
                         Command="{Binding $parent[ListBox].DataContext.DownloadCommand, Mode=OneWay}" 
-                        CommandParameter="{Binding}"
-                        >
+                        CommandParameter="{Binding}">
                     <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp"/>
                 </Button>
                 <ProgressBar IsVisible="{Binding IsWorking, Mode=OneWay}" Value="{Binding Percentage, Mode=OneWay}"
-                             Orientation="Vertical" Opacity="0.5" MinHeight="0"
-                             />
+                             Orientation="Vertical" Opacity="0.5" MinHeight="0"/>
             </Panel>
         </Grid>
     </Border>
