--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -4,7 +4,6 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:playlist="clr-namespace:v00v.Views.Playlists"
     >
-
     <Expander IsExpanded="False" ExpandDirection="Left">
         <Expander.Header>
             <StackPanel Orientation="Vertical"> 
@@ -20,11 +19,8 @@
             </StackPanel>
         </Expander.Header>
         <Grid Width="220" ColumnDefinitions="*,auto" RowDefinitions="46,*" Background="#242e44">
-
             <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,9,8,9"
-                     Text="{Binding SearchText, Mode=TwoWay}" 
-                     />
-
+                     Text="{Binding SearchText, Mode=TwoWay}" ToolTip.Tip="Search"/>
             <ListBox Grid.Row="1" Grid.ColumnSpan="2"
                      Items="{Binding Entries, Mode=OneWay}"
                      VirtualizationMode="Simple"
@@ -32,15 +28,12 @@
                      BorderThickness="0"
                      ScrollViewer.VerticalScrollBarVisibility="Hidden"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                     Background="Transparent"
-                     >
-
+                     Background="Transparent">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <playlist:PlaylistEntryControl />
+                        <playlist:PlaylistEntryControl/>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
-
                 <ListBox.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="link" 
@@ -97,14 +90,10 @@
                         </MenuItem>
                     </ContextMenu>
                 </ListBox.ContextMenu>
-
             </ListBox>
         </Grid>
     </Expander>
-    
-    
     <UserControl.Styles>
-        
         <Style Selector="TextBox">
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="Foreground" Value="#ffffff" />
@@ -181,11 +170,7 @@
         <Style Selector="ListBoxItem TextBlock">
             <Setter Property="Foreground" Value="#92a3b3"/>
         </Style>
-        
-        <!--<Style Selector="ListBoxItem:selected TextBlock">
-            <Setter Property="Foreground" Value="#ffffff"/>
-        </Style>-->
-        
+
         <Style Selector="ListBoxItem Panel.Indicator > Border">
             <Setter Property="Margin" Value="0,2" />
             <Setter Property="Padding" Value="6,0" />
@@ -210,7 +195,5 @@
         <Style Selector="Expander TextBlock">
             <Setter Property="Foreground" Value="#92a3b3" />
         </Style>
-
     </UserControl.Styles>
-    
 </UserControl>
