--- a/src/v00v.Views/Playlists/PlaylistEntryControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistEntryControl.xaml
@@ -1,33 +1,25 @@
 ﻿<UserControl 
     x:Class="v00v.Views.Playlists.PlaylistEntryControl"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns="https://github.com/avaloniaui">
-    
+    xmlns="https://github.com/avaloniaui"
+    >
     <Grid ColumnDefinitions="auto,*,auto">
-        
         <Border Grid.ColumnSpan="3" />
-
         <Image Grid.Row="0" Grid.Column="0"
                Width="{Binding ThumbSize, Mode=OneWay}" Height="{Binding ThumbSize, Mode=OneWay}"
                Source="{Binding Thumb, Mode=OneWay}" 
-               Stretch="Fill" 
-               />
-
+               Stretch="Fill"/>
         <TextBox Grid.Column="1" IsVisible="{Binding IsSearchPlaylist, Mode=OneWay}" 
                  Margin="60,0,0,0" ScrollViewer.VerticalScrollBarVisibility="Disabled"
                  FontSize="12" Height="26"
                  VerticalAlignment="Center"
                  HorizontalAlignment="Stretch"
                  Watermark=". . ."
-                 Text="{Binding SearchText, Mode=TwoWay}"
-                 />
-
+                 Text="{Binding SearchText, Mode=TwoWay}"/>
         <CheckBox Grid.Column="2" IsVisible="{Binding IsSearchPlaylist, Mode=OneWay}" Margin="0,0,8,0"
                   VerticalAlignment="Center"
                   IsChecked="{Binding EnableGlobalSearch, Mode=TwoWay}"
-                  ToolTip.Tip="Global"
-                  />
-
+                  ToolTip.Tip="Global"/>
         <ComboBox Grid.Column="2" IsVisible="{Binding IsPopularPlaylist, Mode=OneWay}" Margin="0,0,8,0"
                   VerticalAlignment="Center"
                   Height="24" Width="45"
@@ -40,21 +32,16 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-
         <Panel Classes="Title" Grid.Column="1" Height="24" VerticalAlignment="Center">
             <TextBlock Text="{Binding Title, Mode=OneWay}" 
                        TextWrapping="NoWrap" VerticalAlignment="Center" 
                        FontSize="15" 
-                       ToolTip.Tip="{Binding Title, Mode=OneWay}" 
-                       />
+                       ToolTip.Tip="{Binding Title, Mode=OneWay}"/>
         </Panel>
-        
         <Panel Classes="Indicator" Grid.Column="2" Height="24" VerticalAlignment="Center">
             <Border IsVisible="{Binding HasNew, Mode=OneWay}">
                 <TextBlock Text="{Binding Count, Mode=OneWay}" VerticalAlignment="Center"/>
             </Border>
         </Panel>
-
     </Grid>
-
 </UserControl>
