--- a/src/v00v.Views/Popup/PopupControl.xaml
+++ b/src/v00v.Views/Popup/PopupControl.xaml
@@ -7,40 +7,29 @@
     xmlns:channelmodel="clr-namespace:v00v.ViewModel.Popup.Channel;assembly=v00v.ViewModel"
     xmlns:channelview="clr-namespace:v00v.Views.Popup.Channel" 
     >
-    
     <UserControl.KeyBindings>
         <KeyBinding Command="{Binding CloseCommand, Mode=OneWay}" Gesture="Escape"/>
     </UserControl.KeyBindings>
-
     <Grid Name="grid" RowDefinitions="auto,*" ColumnDefinitions="*,auto,*">
-        
         <Rectangle Grid.RowSpan="3" Grid.ColumnSpan="3" Fill="#000000" Opacity="0.75" />
-        
         <Border Grid.Column="1" Grid.Row="0" Margin="0,24,0,0" Background="#ffffff" BorderThickness="1" BorderBrush="#00c8ff" CornerRadius="2">
-            
             <Grid RowDefinitions="auto,auto,auto" ColumnDefinitions="auto,*,auto">
-                
                 <Border Classes="Title" Grid.Row="0" Grid.RowSpan="2" Grid.ColumnSpan="3">
-                    <TextBlock Foreground="#444444" FontWeight="Medium" Text="{Binding Context.Title, Mode=OneWay}" VerticalAlignment="Center" />
+                    <TextBlock Foreground="#444444" FontWeight="Medium" Text="{Binding Context.Title, Mode=OneWay}" VerticalAlignment="Center"/>
                 </Border>
-
                 <StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal">
                     <Button Command="{Binding ExpandCommand, Mode=OneWay}" IsVisible="{Binding Context.CanExpanded, Mode=OneWay}"
-                            Width="16" Height="16" Margin="8" Background="Transparent" BorderThickness="0"
-                            >
+                            Width="16" Height="16" Margin="8" Background="Transparent" BorderThickness="0">
                         <Image Source="{Binding Context.ExpandThumb, Mode=OneWay}" Opacity="0.66"/>
                     </Button>
                     <Button Command="{Binding CloseCommand, Mode=OneWay}"
                             Width="16" Height="16" Margin="8" Background="Transparent" BorderThickness="0"
-                            IsEnabled="{Binding !Context.IsWorking, Mode=OneWay}"
-                            >
-                        <Image Source="resm:v00v.MainApp.Icons.Dark.X32.png?assembly=v00v.MainApp" Width="16" Height="16" Opacity="0.66" />
+                            IsEnabled="{Binding !Context.IsWorking, Mode=OneWay}">
+                        <Image Source="resm:v00v.MainApp.Icons.Dark.X32.png?assembly=v00v.MainApp" Width="16" Height="16" Opacity="0.66"/>
                     </Button>
                 </StackPanel>
-
                 <Carousel Grid.Row="2" Grid.ColumnSpan="3" MinWidth="380" MinHeight="20" Margin="6" 
-                          Items="{Binding Contexts, Mode=OneWay}" SelectedItem="{Binding Context, Mode=OneWay}"
-                          >
+                          Items="{Binding Contexts, Mode=OneWay}" SelectedItem="{Binding Context, Mode=OneWay}">
                     <Carousel.DataTemplates>
                         <DataTemplate DataType="{x:Type channelmodel:ChannelPopupContext}">
                             <channelview:ChannelPopupControl />
@@ -53,7 +42,6 @@
             </Grid>
         </Border>
     </Grid>
-    
     <UserControl.Styles>
         <Style Selector="Border.Title">
             <Setter Property="Margin" Value="0" />
@@ -65,5 +53,4 @@
             <!-- <Setter Property="CornerRadius" Value="8,8,0,0" /> -->
         </Style>
     </UserControl.Styles>
-    
 </UserControl>
