--- a/src/v00v.Views/Startup/StartupControl.xaml
+++ b/src/v00v.Views/Startup/StartupControl.xaml
@@ -6,45 +6,45 @@
     >
     <Border BorderThickness="1" BorderBrush="#bdacd1">
         <Panel>
-            <Grid ColumnDefinitions="32,auto,auto" RowDefinitions="30,30,*,25,25,25,25,10">
-
-                <StackPanel Grid.Column="1" Grid.Row ="0" Margin="0,10,0,0" Orientation="Horizontal">
+            <Grid ColumnDefinitions="32,auto,auto" RowDefinitions="25,*,25,25,25,25,10">
+                <StackPanel Grid.Column="1" Grid.Row="0" Margin="3,5,0,0" Orientation="Horizontal" VerticalAlignment="Bottom">
                     <Panel>
                         <Ellipse />
                         <Image Source="resm:v00v.MainApp.Icons.Light.Plus32.png?assembly=v00v.MainApp" />
                     </Panel>
                     <TextBlock Text="Add" Margin="10,0,0,0"/>
-                    <Panel Margin="10,0,0,0">
+                    <Panel Margin="45,0,0,0">
                         <Ellipse />
                         <Image Source="resm:v00v.MainApp.Icons.Light.Settings32.png?assembly=v00v.MainApp" />
                     </Panel>
                     <TextBlock Text="Synchronize" Margin="10,0,0,0"/>
+                    <CheckBox IsChecked="{Binding ShowSettings, Mode=TwoWay}" Margin="110,0,0,0" Content="Show settings"/>
                 </StackPanel>
-                <StackPanel Grid.Column="1" Grid.Row="1" Margin="3,0,0,0" Orientation="Horizontal" VerticalAlignment="Bottom">
-                    <CheckBox IsChecked="{Binding ShowSettings, Mode=TwoWay}"/>
-                    <TextBlock Text="Show settings" Margin="12,0,0,0"/>
-                </StackPanel>
-                <Grid Grid.Column="1" Grid.Row ="2" RowDefinitions="15,25,2,25,2,25,30,25,2,25,2,25,2,25,25,25,4,25" IsVisible="{Binding ShowSettings, Mode=OneWay}">
+                <Grid Grid.Column="1" Grid.Row="1" RowDefinitions="15,25,2,25,2,25,2,25,30,25,2,25,2,25,2,25,25,25,4,25" IsVisible="{Binding ShowSettings, Mode=OneWay}">
                     <StackPanel Orientation="Horizontal" Grid.Row="1">
+                        <TextBlock Text="YouTube api key:" ToolTip.Tip="Restart required"/>
+                        <TextBox Width="312" Margin="11,0,0,0" Watermark="Insert key..." Text="{Binding YouApiKey, Mode=TwoWay}" ToolTip.Tip="Restart required"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Grid.Row="3">
                         <TextBlock Text="Database folder:" ToolTip.Tip="For db location" IsEnabled="{Binding EnableCustomDb, Mode=OneWay}"/>
                         <TextBox Width="279" Margin="15,0,0,0" Watermark="Use internal location..." Text="{Binding DbDir, Mode=TwoWay}" IsReadOnly="True" IsEnabled="{Binding EnableCustomDb, Mode=OneWay}" ToolTip.Tip="Restart required"/>
                         <Button Width="30" Content=">>" Margin="2,0,0,0" Name="SelectDbFolder" IsEnabled="{Binding EnableCustomDb, Mode=OneWay}"/>
                         <CheckBox Margin="8,0,0,0" IsChecked="{Binding EnableCustomDb, Mode=TwoWay}" ToolTip.Tip="Enable custom db location"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Grid.Row="3">
+                    <StackPanel Orientation="Horizontal" Grid.Row="5">
                         <TextBlock Text="Download folder:" ToolTip.Tip="For downloaded files"/>
                         <TextBox Width="312" Margin="10,0,0,0" Watermark="Select..." Text="{Binding DownloadDir, Mode=TwoWay}" IsReadOnly="True"/>
                         <Button Width="30" Content=">>" Margin="2,0,0,0" Name="SelectFolder"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Grid.Row="5">
+                    <StackPanel Orientation="Horizontal" Grid.Row="7">
                         <TextBlock Text="Media player:"/>
                         <TextBox Width="312" Margin="30,0,0,0" Watermark="Select path to mpc-be..." Text="{Binding WatchApp, Mode=TwoWay}" IsReadOnly="True"/>
                         <Button Width="30" Content=">>" Margin="2,0,0,0" Name="OpenFile"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Grid.Row="7">
+                    <StackPanel Orientation="Horizontal" Grid.Row="9">
                         <TextBlock Text="Schedulers:" ToolTip.Tip="Restart required"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Grid.Row="9">
+                    <StackPanel Orientation="Horizontal" Grid.Row="11">
                         <TextBlock Text="Synchronization" ToolTip.Tip="Restart required"/>
                         <CheckBox Margin="16,0,5,0" IsChecked="{Binding EnableRepeatSyncSchedule, Mode=TwoWay}" ToolTip.Tip="Enable periodical synchronization"/>
                         <TextBlock Text="Every (min):" ToolTip.Tip="Minutes"/>
@@ -55,7 +55,7 @@
                         <TextBlock Text=":" Margin="2,0,2,0"/>
                         <ComboBox Width="40" IsEnabled="{Binding EnableDailySyncSchedule, Mode=OneWay}" Items="{Binding Minutes, Mode=OneTime}" SelectedItem="{Binding SelectedSyncMinute, Mode=TwoWay}" ToolTip.Tip="Minutes"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Grid.Row="11">
+                    <StackPanel Orientation="Horizontal" Grid.Row="13">
                         <TextBlock Text="Parser update" ToolTip.Tip="Restart required"/>
                         <CheckBox Margin="28,0,5,0" IsChecked="{Binding EnableRepeatParserUpdateSchedule, Mode=TwoWay}" ToolTip.Tip="Enable periodical parser updating"/>
                         <TextBlock Text="Every (min):" ToolTip.Tip="Minutes"/>
@@ -66,7 +66,7 @@
                         <TextBlock Text=":" Margin="2,0,2,0"/>
                         <ComboBox Width="40" IsEnabled="{Binding EnableDailyParserUpdateSchedule, Mode=OneWay}" Items="{Binding Minutes, Mode=OneTime}" SelectedItem="{Binding SelectedParserMinute, Mode=TwoWay}" ToolTip.Tip="Minutes"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Grid.Row="13">
+                    <StackPanel Orientation="Horizontal" Grid.Row="15">
                         <TextBlock Text="Backup data" ToolTip.Tip="To database folder (restart required)"/>
                         <CheckBox Margin="37,0,5,0" IsChecked="{Binding EnableRepeatBackupSchedule, Mode=TwoWay}" ToolTip.Tip="Enable periodical data backup (to database folder)"/>
                         <TextBlock Text="Every (min):" ToolTip.Tip="Minutes"/>
@@ -77,30 +77,30 @@
                         <TextBlock Text=":" Margin="2,0,2,0"/>
                         <ComboBox Width="40" IsEnabled="{Binding EnableDailyBackupSchedule, Mode=OneWay}" Items="{Binding Minutes, Mode=OneTime}" SelectedItem="{Binding SelectedBackupMinute, Mode=TwoWay}" ToolTip.Tip="Minutes"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Grid.Row="15">
+                    <StackPanel Orientation="Horizontal" Grid.Row="17">
                         <TextBlock Text="Download file:" ToolTip.Tip="Any url"/>
                         <controls:ExtendedTextBox Width="312" Margin="25,0,0,0" Watermark="Link..." Text="{Binding DownloadUrl, Mode=TwoWay}"/>
                         <Button Width="30" Content=">>" Margin="2,0,0,0" Command="{Binding DownloadCommand, Mode=OneTime}"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Grid.Row="17" IsVisible="{Binding IsYoutubeLink, Mode=OneWay}">
+                    <StackPanel Orientation="Horizontal" Grid.Row="19" IsVisible="{Binding IsYoutubeLink, Mode=OneWay}">
                         <TextBlock Text="Options:"/>
                         <ComboBox Margin="58,0,0,0" Width="90" Items="{Binding Formats, Mode=OneTime}" SelectedItem="{Binding SelectedFormat, Mode=TwoWay}" />
                         <CheckBox Content="With subtitles" IsChecked="{Binding WithSubs, Mode=TwoWay}" Margin="15,0,0,0" IsEnabled="{Binding SubsEnabled, Mode=OneWay}" />
                     </StackPanel>
                 </Grid>
-                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3">
+                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2">
                     <controls:ExtendedTextBox Width="450" IsReadOnly="True" Text="https://chocolatey.org/docs/installation"/>
                     <TextBlock Text="Install chocolatey" Margin="10,0,0,0"/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="4">
+                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3">
                     <controls:ExtendedTextBox Width="450" IsReadOnly="True" Text="choco install ffmpeg" />
                     <TextBlock Text="Install ffmpeg" Margin="10,0,0,0"/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="5">
+                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="4">
                     <controls:ExtendedTextBox Width="450" IsReadOnly="True" Text="choco install youtube-dl" />
                     <TextBlock Text="Install youtube-dl" Margin="10,0,0,0"/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6">
+                <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="5">
                     <controls:ExtendedTextBox Width="450" IsReadOnly="True" Text="https://www.videohelp.com/software/MPC-BE" />
                     <TextBlock Text="Install mpc-be" Margin="10,0,0,0"/>
                 </StackPanel>
